fix a few jdk5-isms
git-svn-id: https://svn.apache.org/repos/asf/velocity/engine/trunk@730588 13f79535-47bb-0310-9956-ffa450edef68